--- a/style.css
+++ b/style.css
@@ -1,2 +1,63 @@
 /* Fonts stuffs */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+
+body{
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    background-color: #111111;
+    font-family: 'Poppins';
+}
+
+/* Navbar */
+.navbar{
+    display: flex;
+    align-items: center;
+    padding: 30px;
+}
+.advantage_logo{
+    width: 39px;
+    height: 41px;
+}
+.advantage_text{
+    margin: 0;
+    padding: 0;
+    color: white;
+    margin-left: 10px;
+}
+.menu_icon{
+    width: 34px;
+    height: 34px;
+    margin-left: auto;
+    cursor: pointer;
+}
+
+/* Landing page stuffs */
+.blob-with-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    margin-top: 50px;
+}
+.blob_text{
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    font-size: 48px;
+    text-shadow: 10px 10px 8px rgba(203, 203, 203, 0.25);
+}
+    /* Card Stuffs Underneath */
+
+.main-card{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    margin-top: 20px;
+}
+.arrow-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
