--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     min-height: 100vh;
     background-color: #111111;
     font-family: 'Poppins';
+    scroll-behavior: smooth;
 }
 
 /* Navbar */
@@ -50,7 +51,7 @@ body{
 }
     /* Card Stuffs Underneath */
 
-.main-card{
+.main_card{
     display: flex;
     justify-content: center;
     margin: auto;
@@ -61,3 +62,48 @@ body{
     justify-content: center;
     margin-top: 20px;
 }
+
+/* Three cards and text stuffs*/
+.three-cards{
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+.three_texts-container{
+    color: white;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    font-size: 30px;
+}
+.three_text{
+    z-index: 9;
+    line-height: 3;
+}
+
+/* Funnel */
+.funnel_container{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+/* Card under funnel and description*/
+.card_bottom-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+.advantage_desc-container{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.advantage_desc{
+    width: 367px;
+    height: 108px;
+    color: white;
+    font-size: 24px;
+}
+
