--- a/style.css
+++ b/style.css
@@ -9,16 +9,20 @@ body{
     font-family: 'Poppins';
     scroll-behavior: smooth;
 }
-
+main{
+    margin: 0px 30px 0px 30px;
+}
 /* Navbar */
 .navbar{
     display: flex;
     align-items: center;
     padding: 30px;
+    
 }
 .advantage_logo{
     width: 39px;
     height: 41px;
+    max-width: 100%;
 }
 .advantage_text{
     margin: 0;
@@ -34,18 +38,20 @@ body{
 }
 
 /* Landing page stuffs */
-.blob-with-text{
+.top_text-container{
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
-    margin-top: 50px;
+    margin-top: 0px;
+    flex-wrap: wrap;
 }
-.blob_text{
+.top_text{
     max-width: 100%;
     display: flex;
+    justify-content: center;
+    margin: auto;
     align-items: center;
-    position: absolute;
     font-size: 48px;
     text-shadow: 10px 10px 8px rgba(203, 203, 203, 0.25);
 }
@@ -55,7 +61,11 @@ body{
     display: flex;
     justify-content: center;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 0px;
+}
+.main_card_img{
+    height: auto;
+    max-width: 100%;
 }
 .arrow-container{
     display: flex;
@@ -86,7 +96,10 @@ body{
 .funnel_container{
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    margin: auto;
+}
+.funnel{
+    max-width: 100%;
 }
 
 /* Card under funnel and description*/
@@ -94,6 +107,9 @@ body{
     display: flex;
     justify-content: center;
     margin-top: 40px;
+}
+.card_bottom{
+    max-width: 100%;
 }
 .advantage_desc-container{
     display: flex;
@@ -105,5 +121,27 @@ body{
     height: 108px;
     color: white;
     font-size: 24px;
+    font-size: 100%;
 }
 
+.footer_stuff{
+    display: flex;
+    background-color: #0c0c0c;
+    height: 100px;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    padding: 0px 30px;
+}
+.footer_text{
+    text-align: center;
+    font-size: 100%;
+}
+
+
+/*
+
+
+
+*/
